# SOLCivX-Solana

./: .gitignore  README.md
speedrun_anchor/: Anchor.toml  GameIdl.cs
speedrun_anchor/programs/speedrun_anchor/: Cargo.toml
speedrun_anchor/programs/speedrun_anchor/src/: lib.rs
speedrun_anchor/tests/: speedrun_anchor.ts
speedrun_unity/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  speedrun_unity.sln
speedrun_unity/Assets/Animations/Player/: Player.controller  Punching.fbx  Soldier_71@Idle.fbx  Soldier_71@Walking.fbx
speedrun_unity/Assets/Font/: Valorant Font SDF.asset
speedrun_unity/Assets/Graphics/Shaders/: MinimapIndicatorPulse.shadergraph  PointerSelection.shadergraph
speedrun_unity/Assets/Input/: InputManager.cs  InputManager.inputactions
speedrun_unity/Assets/Models/: Boat.fbx  Cactus.fbx  DesertPlant.fbx  LP_Tree1.fbx  LP_Tree2.fbx  Martelo_2.fbx  NInja.controller  Running_1.fbx  tower1.fbx
speedrun_unity/Assets/Models/House 2/: house2.fbx
speedrun_unity/Assets/Models/tower1/: MainMat.mat
speedrun_unity/Assets/Prefabs/Essentials/: Camera Rig.prefab  (+3 more)
speedrun_unity/Assets/Renderer/: URP.asset
speedrun_unity/Assets/Scenes/: Game.unity  MainMenu.unity
speedrun_unity/Assets/Scripts/: GameIdl.cs
speedrun_unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
speedrun_unity/UserSettings/: EditorUserSettings.asset
speedrun_unity/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
(+153 files in other folders)
